[package]
name = "openapi-merge"
description = "OpenAPI Merge library"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
indexmap.workspace = true
openapiv3.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true


[dev-dependencies]
pretty_assertions.workspace = true


[lints]
workspace = true
